src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Exclude_from_Commission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the original owner of the opportunity has now left but as the owner is inactive, the person taking over the opportunity is now the owner but shouldn&apos;t receive the commission.</description>
        <inlineHelpText>When the original owner of the opportunity has now left but as the owner is inactive, the person taking over the opportunity is now the owner but shouldn&apos;t receive the commission.</inlineHelpText>
        <label>Exclude from Commission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <description>Requested by Sales, see case: 00002457</description>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <inlineHelpText>The expiry date of the credit/debit card. As cards only have month &amp; year please choose the 1st of the month as the day.</inlineHelpText>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Written_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If ticked, the opportunity has been written off by finance and cannot be changed. Contact Finance for more information.</inlineHelpText>
        <label>Finance Written Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_to_Credit_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to identify if opp needs to be credited or not. This is used to inform the &quot;Invoice Status&quot; field.</inlineHelpText>
        <label>Finance to Credit Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_to_Invoice_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to identify if opp needs to be invoiced or not. This is used in combination with the invoice date to inform the &quot;Invoice Status&quot; field.</inlineHelpText>
        <label>Finance to Invoice Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fire_Safety__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Lead Page for STP Course</description>
        <inlineHelpText>Copied from the Lead Page for STP Course</inlineHelpText>
        <label>Fire Safety Awareness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfilment_Status__c</fullName>
        <description>This is for Tangible Goods opportunities only and has been added for the Website Store (Case: 2432)</description>
        <label>Fulfilment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent to Fulfilment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Despatched</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google_Adwords__c</fullName>
        <description>The google adwords used in making the sale.</description>
        <inlineHelpText>The google adwords used in making the sale.</inlineHelpText>
        <label>Google Adwords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Keywords__c</fullName>
        <description>The keywords used in any search engine that resulted in the online sale.</description>
        <inlineHelpText>The keywords used in any search engine that resulted in the online sale.</inlineHelpText>
        <label>Google Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Referrer__c</fullName>
        <description>The page that the customer clicked that landed them on the BSC website.</description>
        <inlineHelpText>The page that the customer clicked that landed them on the BSC website.</inlineHelpText>
        <label>Google Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_utm_Campaign__c</fullName>
        <description>The Google Campaign that was used which resulted in this sale.</description>
        <inlineHelpText>The Google Campaign that was used which resulted in this sale.</inlineHelpText>
        <label>Google Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_utm_Term__c</fullName>
        <description>The Google Campaign Term which resulted in the Sale</description>
        <inlineHelpText>The Google Campaign Term which resulted in the Sale</inlineHelpText>
        <label>Google Campaign Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_utm_content__c</fullName>
        <description>The Google campaign content used to make the Sale.</description>
        <inlineHelpText>The Google campaign content used to make the Sale.</inlineHelpText>
        <label>Google Campaign content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_utm_medium__c</fullName>
        <description>The Google campaign medium used that resulted in the Sale</description>
        <inlineHelpText>The Google campaign medium used that resulted in the Sale</inlineHelpText>
        <label>Google Campaign medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_utm_source__c</fullName>
        <description>The source of the Google Campaign which resulted in the Sale</description>
        <inlineHelpText>The source of the Google Campaign which resulted in the Sale</inlineHelpText>
        <label>Google Campaign Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_and_Safety_Law__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Lead Page for STP Course</description>
        <inlineHelpText>Copied from the Lead Page for STP Course</inlineHelpText>
        <label>Health and Safety Law</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_and_Safety_at_work_Act_1974__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Lead Page for STP Course</description>
        <inlineHelpText>Copied from the Lead Page for STP Course</inlineHelpText>
        <label>Health and Safety at Work etc Act 1974</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IC_Price_Difference_Count__c</fullName>
        <inlineHelpText>Counts the number of products on which the Sales Price is different from the Sales Manager Price</inlineHelpText>
        <label>IC Price Difference Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.IC_Price_Difference__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IC_Price_Variation_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This box is ticked by the approval process of submitting a variation in In-Company products for approval</inlineHelpText>
        <label>IC Price Variation Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Information_received_by_Deleagtes__c</fullName>
        <inlineHelpText>What info have delegates been given, what do they expect to get out of training?</inlineHelpText>
        <label>Information received by Deleagtes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The company on which this opportunity will be invoiced.</inlineHelpText>
        <label>Invoice Company</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or is not an active company.</errorMessage>
            <filterItems>
                <field>c2g__codaCompany__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Paid_Date__c</fullName>
        <label>Invoice Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <formula>IF( Finance_Written_Off__c = True, &apos;Written Off&apos;,
   IF( Finance_to_Credit_Opp__c = True, &apos;To Be Credited&apos;,
      IF( 
         OR( 
            AND(Finance_to_Invoice_Opp__c = True,  ISBLANK(Date_to_be_Invoiced__c)) , 
            AND(Finance_to_Invoice_Opp__c = True,  Date_to_be_Invoiced__c &lt;=  TODAY())
         ),&apos;To Be Invoiced&apos;,
         
         IF( AND(CreatedBy.Alias = &apos;Website&apos;, !ISBLANK(Latest_Invoice__r.Website_Order_Id__c)), &apos;N/A&apos;,
            IF( Using_one_to_one_invoicing__c = &apos;Yes&apos;,
               

               IF( AND(Latest_Invoice__r.Is_Credited_In_Full__c = True,!ISBLANK(Latest_Invoice__c),ISPICKVAL(Latest_Invoice__r.c2g__InvoiceStatus__c , &apos;Complete&apos;)) ,&apos;Credited&apos;,
                  IF( AND( Latest_Invoice__r.c2g__OutstandingValue__c = 0, !ISBLANK(Latest_Invoice__c),ISPICKVAL(Latest_Invoice__r.c2g__InvoiceStatus__c , &apos;Complete&apos;)) , &apos;Paid&apos;,
                     IF( AND(Latest_Invoice__r.c2g__OutstandingValue__c &gt; 0, Latest_Invoice__r.c2g__OutstandingValue__c &lt; Latest_Invoice__r.c2g__InvoiceTotal__c, !ISBLANK(Latest_Invoice__c),ISPICKVAL(Latest_Invoice__r.c2g__InvoiceStatus__c , &apos;Complete&apos;)), &apos;Part Paid&apos;,
                        IF(  AND(Latest_Invoice__r.c2g__OutstandingValue__c =  Latest_Invoice__r.c2g__InvoiceTotal__c, !ISBLANK(Latest_Invoice__c),ISPICKVAL(Latest_Invoice__r.c2g__InvoiceStatus__c , &apos;Complete&apos;)), &apos;Invoiced&apos;,
                           &apos;No Action&apos;
                        )
                     )
                  )
               )



            ,&apos;N/A&apos;
            )
         ) 
      )
   )
)</formula>
        <inlineHelpText>Determines the current status of the opportunity based on the one to one invoicing model.</inlineHelpText>
        <label>Invoice Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoiced_Total__c</fullName>
        <description>Invoiced Total (Excl. VAT)</description>
        <inlineHelpText>Invoiced Total (Excl. VAT)</inlineHelpText>
        <label>Invoiced Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this Opp been created as a result of Cancellation Process?</description>
        <inlineHelpText>Has this Opp been created as a result of Cancellation Process?</inlineHelpText>
        <label>Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Credited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a Credit Note exists.</description>
        <inlineHelpText>Indicates whether a Credit Note exists.</inlineHelpText>
        <label>Is Credited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Transferred__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this Opp been created as a result of Transfer Process?</description>
        <inlineHelpText>Has this Opp been created as a result of Transfer Process?</inlineHelpText>
        <label>Is Transferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Number_Switch_Solo__c</fullName>
        <label>Issue Number (Switch/Solo)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joining_Instructions_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joining Instructions Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_Subscription_Products__c</fullName>
        <description>Count of product lines which are associated with LMS subscriptions</description>
        <inlineHelpText>Count of product lines which are associated with LMS subscriptions</inlineHelpText>
        <label>LMS Subscription Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Subscription_Product_Type__c</field>
            <operation>equals</operation>
            <value>LMS</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Latest_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Whenever a new invoice is created on the opportunity, this is updated to the latest invoice.</inlineHelpText>
        <label>Latest Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Originated_From__c</fullName>
        <description>When the Opportunity has been created from a lead.</description>
        <inlineHelpText>When the Opportunity has been created from a lead.</inlineHelpText>
        <label>Lead Originated From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learner_Resource_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by logistics to determine when access to the learner resource has been given</description>
        <inlineHelpText>Tick once the learner resource access has been given.</inlineHelpText>
        <label>Learner Resource Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Learning_Difficulties__c</fullName>
        <inlineHelpText>Do any deleagtes have difficulties with learning?</inlineHelpText>
        <label>Learning Difficulties</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License_Count_E_Delivery_DMS__c</fullName>
        <inlineHelpText>Roll up of number of DMS Users (for calculating E-Delivery Pricing)</inlineHelpText>
        <label>License Count: E-Delivery DMS</label>
        <summarizedField>OpportunityLineItem.E_Delivery_Total_Licences__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.DMS_Product__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>License_Count_E_Delivery_Training__c</fullName>
        <inlineHelpText>Roll up from E-Delivery Training Products (excludes DMS)</inlineHelpText>
        <label>License Count: E-Delivery Training</label>
        <summarizedField>OpportunityLineItem.E_Delivery_Total_Licences__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.E_Delivery_Training_Product__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>Formula to display link on approval request page</description>
        <formula>HYPERLINK(&quot;https://eu1.salesforce.com/&quot;+Id,&quot;Click Here to View&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistics_Team_Co_ordinator__c</fullName>
        <description>Used for the logistics team to decide who is taking responsibility for the logistics of the opportunity.</description>
        <inlineHelpText>Used for the logistics team to decide who is taking responsibility for the logistics of the opportunity.</inlineHelpText>
        <label>Operations Co-ordinator</label>
        <picklist>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1 &amp; 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instant Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kim Shears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not use.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not use..</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Sub_Definition2__c</fullName>
        <description>Only to be used against Lost Reasons &quot;Location not Convenient&quot;, &quot;Service not Offered&quot;, &quot;Dates no Convenient&quot;</description>
        <label>Lost Reason Sub Definition2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Sub_Definition__c</fullName>
        <description>Linked to the Lost Reason</description>
        <label>Lost Reason Sub Definition</label>
        <picklist>
            <controllingField>Lost_Reason__c</controllingField>
            <picklistValues>
                <fullName>£1,000&gt;£2,500 out of budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£10,000+ out of budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£100&gt;£500 out of budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£2,500&gt;£5,000 out of budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£5,000&gt;£10,000 out of budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£500&gt;£1,000 out of budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bureau VERITAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed to group membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company closed - In Liquidation/Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost cutting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gone to competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IOSH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LRQA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non payment - (cancelled as chased but still no payment received)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not using benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not value for money/To expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred D-Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred E-Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROSPA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service not Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dates not Convenient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location not Convenient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Found cheaper provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Learning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Management_of_Health_and_Safety_at_work__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Lead Page for STP Course</description>
        <inlineHelpText>Copied from the Lead Page for STP Course</inlineHelpText>
        <label>Management of Health and Safety at Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <description>Adds whether the account attached to the opportunity is a member or not depending on the account member flag on the account</description>
        <formula>IF(
 Account.Member__c =TRUE,
&quot;Member&quot;,
&quot;Not a Member&quot;
)</formula>
        <inlineHelpText>Is this SITE a Member? (Note that other sites in the company may be covered by various memberships)</inlineHelpText>
        <label>Member?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Subscription_Products__c</fullName>
        <description>Count of product lines which are associated with LMS subscriptions</description>
        <inlineHelpText>Count of product lines which are associated with LMS subscriptions</inlineHelpText>
        <label>Membership Subscription Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Subscription_Product_Type__c</field>
            <operation>equals</operation>
            <value>Membership</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit/Debit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Reference</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migrated_Product_Interest__c</fullName>
        <description>Indicates the general Product Interest for Migrated Open Opportunities from the Opportunity table</description>
        <label>Migrated Product Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_on_Card__c</fullName>
        <inlineHelpText>The full name as displayed on the front of the credit/debit card including title. Eg: Mr Joe B Bloggs</inlineHelpText>
        <label>Name(s) on Card</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Noise_and_Vibration_Mansell_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Additional checkbox field requested by logistics for STC&apos;s</description>
        <inlineHelpText>Tick if related to a Noise and Vibration for Mansell Only</inlineHelpText>
        <label>Noise and Vibration (Mansell Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Delegates__c</fullName>
        <description>Copied from Lead - the number of delegates the customers wishes to book on the course</description>
        <inlineHelpText>Copied from Lead - the number of delegates the customers wishes to book on the course</inlineHelpText>
        <label>Number of Delegates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Opportunity_Products__c</fullName>
        <label>Number of Opportunity Products</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Staff_on_Site__c</fullName>
        <description>Allows Salesperson to add number of staff onsite for in-company training.  Should only appear on in-company opporuntunites</description>
        <inlineHelpText>Enter the number of staff onsite for incompany training</inlineHelpText>
        <label>Number of Staff on Site</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_attendees__c</fullName>
        <description>Copied from Lead - The number of delegates the customer wishes to book on the event</description>
        <inlineHelpText>Copied from Lead - The number of delegates the customer wishes to book on the event</inlineHelpText>
        <label>Number of attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OMR_forms_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that an OMR form has been sent</description>
        <inlineHelpText>Denotes that an OMR form has been sent</inlineHelpText>
        <label>OMR forms sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Billing_Address_Combined__c</fullName>
        <description>Shows the full billing address in mailable format depending on whether the fields are populated.</description>
        <formula>IF(ISBLANK( Billing_Address_Building__c), &quot;&quot;,Billing_Address_Building__c+ BR() ) +
IF(ISBLANK(Billing_Street__c), &quot;&quot;,Billing_Street__c+ BR() ) +
IF(ISBLANK(Billing_Area__c), &quot;&quot;,Billing_Area__c+ BR() ) +
IF(ISBLANK(Billing_City__c), &quot;&quot;,Billing_City__c+ BR() ) +
IF(ISBLANK(Billing_State__c), &quot;&quot;,Billing_State__c + BR() ) +
IF(ISBLANK(Billing_PostalCode__c), &quot;&quot;,Billing_PostalCode__c + BR() )+
IF(ISPICKVAL(Billing_Country__c,&quot;United Kingdom&quot;), &quot;&quot;,TEXT(Billing_Country__c))</formula>
        <inlineHelpText>Shows the full billing address in mailable format depending on whether the fields are populated.</inlineHelpText>
        <label>Opportunity Billing Address Combined</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Opportunity Contact)</relationshipLabel>
        <relationshipName>OpportunityContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <displayFormat>O-{0000000}</displayFormat>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Correct__c</fullName>
        <inlineHelpText>Please check owner of opportunity is correct</inlineHelpText>
        <label>Opportunity Owner Correct</label>
        <picklist>
            <picklistValues>
                <fullName>Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_List__c</fullName>
        <description>This is updated from OpportunityLineItemsTriggerMethods</description>
        <label>Opportunity Product List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Shipping_Address_Combined__c</fullName>
        <description>Used for the Drawloop templates for subscription packs</description>
        <formula>IF(ISBLANK(Shipping_Address_Building__c), &quot;&quot;,Shipping_Address_Building__c + BR() ) + 
IF(ISBLANK(Shipping_Street__c), &quot;&quot;,Shipping_Street__c + BR() ) +
IF(ISBLANK(Shipping_Area__c), &quot;&quot;,Shipping_Area__c+ BR() ) +
IF(ISBLANK(Shipping_City__c), &quot;&quot;,Shipping_City__c+ BR() ) +
IF(ISBLANK(Shipping_State__c ), &quot;&quot;,Shipping_State__c  + BR() ) +
IF(ISBLANK(Shipping_Postal_Code__c), &quot;&quot;,Shipping_Postal_Code__c + BR() ) +
IF(ISPICKVAL(Shipping_Country__c,&quot;United Kingdom&quot;), &quot;&quot;,TEXT(Shipping_Country__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Shipping Address Combined</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Create_Date__c</fullName>
        <description>If the Original Opportunity field is populated, this field indicates the create date of that opportunity</description>
        <formula>Original_Opportunity__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the Original Opportunity field is populated, this field indicates the create date of that opportunity</inlineHelpText>
        <label>Original Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity_Value__c</fullName>
        <description>Populated with the total value of the opportunity when the rollover process is initiated</description>
        <inlineHelpText>Value of opportunity before split</inlineHelpText>
        <label>Original Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If populated, this field indicates an original public events opportunity which has been partially closed</description>
        <inlineHelpText>If populated, this field indicates an original public events opportunity which has been partially closed</inlineHelpText>
        <label>Original Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Subsequent Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>